[package]
name = "jasper"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["json", "rfc8259"]
categories = ["encoding"]
description = "A simple RFC 8259-compliant JSON encoder and decoder"
repository = "https://github.com/hoosiernational/Jasper"
authors = ["James Oglesby <ohiorivernerd@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]